2006-01-15
<pablo@netfilter.org>
	o Added missing parameters to set the ports of an expectation tuple
	o Bumped version to 1.00beta2

2005-12-26
<pablo@netfilter.org>
	o add IPv6 support: main change
	o removed dead code: iptables_insmod and get_modprobe
	o compact the commands vs. options table
	o move working vars from the stack to the BSS section
	o update manpage
	o Bumped version to 1.0beta1
<yasuyuki.kozakai@toshiba.co.jp>
	o check address family mismatch
	o fix incomplete copying IPv6 addresses

2005-12-19
<pablo@netfilter.org>
	o We only support ipv4 at the moment: set l3protonum to AF_INET
	o Minor changes to prepare upcoming ipv6 support

2005-12-03
<pablo@netfilter.org>
	o Add support to filter events. ie: -p tcp --orig-port-dst 80 in
	conjuction with -E to get all the requests to HTTP servers
	o Update manpage
	o Missing static function declaration in the protocol handlers
	o Use protocol flags defined in libnetfilter_conntrack
	o Bumped version to 0.991

2005-11-22
<marcus@ingate.com>
	o Fix oversized number of options

2005-11-11
<laforge@netfilter.org>
	o don't check for kernel header path in configure, since we don't use
	  kernel headers
	o don't check for libnfnetlink, we don't use it directly
	o move plugins into pkglibdir
	o remove 'lib' prefix of plugins, they're not really libraries
	o remove version information from plugin filenames
	o Bumped version to 0.99
2005-11-09
<pablo@netfilter.org>
	o set status to zero, libnetfilter_conntrack now activate
	IPS_CONFIRMED since all conntrack in hash must be confirmed.
	o Bumped version to 0.98

2005-11-08
<olenf@ans.pl>
	o Fix warnings generated by gcc -Wall
	o Fix conntrack exit value at error
	o Replace obsolete inet_addr by inet_aton

2005-11-05
<olenf@ans.pl>
	o Improved conntrack -h output
	o add htons for icmp id.
<pablo@eurodev.net>
	o -t and -u are optional at update.
	o Fixed versioning :(
	o Bumped version to 0.97

2005-11-03
<laforge@netfilter.org>